# cloudsmith-oidc-test

./: .gitignore  README.md  oidc_configure.sh  oidc_configure.tf  package.txt
.github/workflows/: auth.yml  build-push-package.yml  oidc-auth.yml  push-package.yml
python_package/: README.md  pyproject.toml  requirements.txt
python_package/src/my_tool/: __init__.py  main.py
