[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-sample-package" # Name on Cloudsmith
version = "0.1.0" # Update this for every push
license = { text = "MIT" }
description = "A sample package for Cloudsmith"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "requests", # Example dependency
]
